[gd_scene load_steps=5 format=2]

[ext_resource path="res://map/obstructions/WaterObstructions.gd" type="Script" id=1]
[ext_resource path="res://map/obstructions/WaterObstruction.tscn" type="PackedScene" id=2]
[ext_resource path="res://map/obstructions/WaterObstruction.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 50 )

[node name="WaterObstructions" type="Node2D"]
script = ExtResource( 1 )

[node name="WaterObstruction" type="Node2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 240 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )
activation_type = 3

[node name="WaterObstruction2" type="Node2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 1056, 240 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )
activation_type = 3

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 512, 239.4 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 1056.23, 239.4 )
shape = SubResource( 1 )

[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
